chore: more fix ansible-lint 6.17.2

--- a/deploy_client.yml
+++ b/deploy_client.yml
@@ -7,7 +7,7 @@
 
   tasks:
     - name: Add the droplet to an inventory group
-      add_host:
+      ansible.builtin.add_host:
         name: "{{ client_ip }}"
         groups: client-host
         ansible_ssh_user: "{{ 'root' if client_ip == 'localhost' else ssh_user }}"
