--- a/roles/client/handlers/main.yml
+++ b/roles/client/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
-- name: restart strongswan
-  service: name={{ strongswan_service }} state=restarted
+- name: Restart strongswan
+  ansible.builtin.service:
+    name: "{{ strongswan_service }}"
+    state: restarted
