--- a/roles/client/tasks/systems/CentOS.yml
+++ b/roles/client/tasks/systems/CentOS.yml
@@ -1,6 +1,6 @@
 ---
 - name: Set OS specific facts
-  set_fact:
+  ansible.builtin.set_fact:
     prerequisites:
       - epel-release
     configs_prefix: /etc/strongswan
