--- a/roles/client/tasks/systems/main.yml
+++ b/roles/client/tasks/systems/main.yml
@@ -1,12 +1,16 @@
 ---
-- include_tasks: Debian.yml
+- name: Include Debian
+  ansible.builtin.include_tasks: Debian.yml
   when: ansible_distribution == 'Debian'
 
-- include_tasks: Ubuntu.yml
+- name: Include Ubuntu
+  ansible.builtin.include_tasks: Ubuntu.yml
   when: ansible_distribution == 'Ubuntu'
 
-- include_tasks: CentOS.yml
+- name: Include CentOS
+  ansible.builtin.include_tasks: CentOS.yml
   when: ansible_distribution == 'CentOS'
 
-- include_tasks: Fedora.yml
+- name: Include Fedora
+  ansible.builtin.include_tasks: Fedora.yml
   when: ansible_distribution == 'Fedora'
