--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,30 +1,35 @@
 ---
 - name: Check the system
-  raw: uname -a
+  ansible.builtin.raw: uname -a
   register: OS
   changed_when: false
   tags:
     - update-users
 
-- fail:
+- name: Fail
+  ansible.builtin.fail:
   when: cloud_test|default(false)|bool
 
-- include_tasks: ubuntu.yml
+- name: Include ubuntu
+  ansible.builtin.include_tasks: ubuntu.yml
   when: '"Ubuntu" in OS.stdout or "Linux" in OS.stdout'
   tags:
     - update-users
 
-- include_tasks: freebsd.yml
+- name: Include freebsd
+  ansible.builtin.include_tasks: freebsd.yml
   when: '"FreeBSD" in OS.stdout'
   tags:
     - update-users
 
 - name: Sysctl tuning
-  sysctl: name="{{ item.item }}" value="{{ item.value }}"
+  ansible.posix.sysctl:
+    name: "{{ item.item }}"
+    value: "{{ item.value }}"
   when: item.item
   with_items:
     - "{{ sysctl|default([]) }}"
   tags:
     - always
 
-- meta: flush_handlers
+- ansible.builtin.meta: flush_handlers
