--- a/tasks/tmpfs/macos.yml
+++ b/tasks/tmpfs/macos.yml
@@ -1,11 +1,11 @@
 ---
 - name: MacOS | set OS specific facts
-  set_fact:
+  ansible.builtin.set_fact:
     tmpfs_volume_name: AlgoVPN-{{ IP_subject_alt_name }}
     tmpfs_volume_path: /Volumes
 
 - name: MacOS | mount a ram disk
-  shell: >
+  ansible.builtin.shell: >
     /usr/sbin/diskutil info "/{{ tmpfs_volume_path }}/{{ tmpfs_volume_name }}/" ||
     /usr/sbin/diskutil erasevolume HFS+ "{{ tmpfs_volume_name }}" $(hdiutil attach -nomount ram://64000)
   args:
