--- a/tasks/tmpfs/main.yml
+++ b/tasks/tmpfs/main.yml
@@ -1,17 +1,17 @@
 ---
 - name: Include tasks for MacOS
-  import_tasks: macos.yml
+  ansible.builtin.import_tasks: macos.yml
   when: ansible_system == "Darwin"
 
 - name: Include tasks for Linux
-  import_tasks: linux.yml
+  ansible.builtin.import_tasks: linux.yml
   when: ansible_system == "Linux"
 
 - name: Set config paths as facts
-  set_fact:
+  ansible.builtin.set_fact:
     ipsec_pki_path: /{{ tmpfs_volume_path }}/{{ tmpfs_volume_name }}/IPsec/
 
 - name: Update config paths
-  add_host:
+  ansible.builtin.add_host:
     name: "{{ 'localhost' if cloud_instance_ip == 'localhost' else cloud_instance_ip }}"
     ipsec_pki_path: "{{ ipsec_pki_path }}"
