ssh_config: ignore pre-existing SSH keys on client
sshd limits the number of authentication attempts permitted per
established connection.
The limit is set via the MaxAuthTries option and defaults to six
attempts.

Client SSH environments that define more than six SSH keys globally or
in the agent would exhaust authentication attempts before they reach the
algo-specified per-instance SSH private key.

SSH client allows "forgetting" existing keys per connection using the
IdentitiesOnly option.
A client only offers an explicitly defined key when this option is set.

--- a/server.yml
+++ b/server.yml
@@ -32,6 +32,7 @@
                     HostName {{ IP_subject_alt_name }}
                     User {{ ansible_ssh_user }}
                     Port {{ ansible_ssh_port }}
+                    IdentitiesOnly yes
                     IdentityFile {{ SSH_keys.private | realpath }}
                     KeepAlive yes
                     ServerAliveInterval 30
