update digitalocean docs on droplets
Make note of smaller/cheaper droplets for DigitalOcean and document it.

--- a/config.cfg
+++ b/config.cfg
@@ -176,6 +176,8 @@ cloud_providers:
       sku: minimal-22_04-daily-lts
       version: latest
   digitalocean:
+    # See docs for extended droplet options, pricing, and availability.
+    # Possible values: 's-1vcpu-512mb-10gb', 's-1vcpu-1gb', ...
     size: s-1vcpu-1gb
     image: "ubuntu-22-04-x64"
   ec2:
