--- a/config.cfg
+++ b/config.cfg
@@ -217,7 +217,7 @@ cloud_providers:
     disk: 10
   vultr:
     os: Ubuntu 22.04 LTS x64
-    size: 1024 MB RAM,25 GB SSD,1.00 TB BW
+    size: vc2-1c-1gb
   linode:
     type: g6-nanode-1
     image: linode/ubuntu22.04
