--- a/config.cfg
+++ b/config.cfg
@@ -206,7 +206,7 @@ cloud_providers:
     image: Ubuntu 22.04 Jammy Jellyfish
     arch: x86_64
   hetzner:
-    server_type: cx22
+    server_type: cpx11 
     image: ubuntu-22.04
   openstack:
     flavor_ram: ">=512"
