fix: Revert to ubuntu-20.04 runners for LXD-based tests
Ubuntu 22.04 runners have a known issue where Docker's firewall rules
block LXC container network traffic. This was causing both scripted-deploy
and docker-deploy jobs to fail with network connectivity issues.

Reverting to ubuntu-20.04 runners resolves the issue as they don't have
this Docker/LXC conflict. The lint job can remain on ubuntu-22.04 as it
doesn't use LXD.

Also removed unnecessary network configuration changes since the original
setup works fine on ubuntu-20.04.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           ansible-lint -x experimental,package-latest,unnamed-task -v *.yml roles/{local,cloud-*}/*/*.yml || true
 
   scripted-deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
     strategy:
@@ -113,7 +113,7 @@ jobs:
           sudo env "PATH=$PATH" ./tests/ipsec-client.sh
 
   docker-deploy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     permissions:
       contents: read
     strategy:
@@ -133,19 +133,7 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           set -x
-          # Retry apt update with fallback to different mirrors
-          for i in {1..5}; do
-            if sudo apt update -y; then
-              break
-            else
-              echo "apt update failed, attempt $i/5"
-              if [ $i -eq 5 ]; then
-                echo "All attempts failed"
-                exit 1
-              fi
-              sleep 5
-            fi
-          done
+          sudo apt update -y
           sudo apt install -y \
             wireguard \
             libxml2-utils \
