fix: Remove openresolv package from Ubuntu 24.04 CI
openresolv was removed from Ubuntu starting with 22.10 as systemd-resolved
is now the default DNS resolution mechanism. The package is no longer
available in Ubuntu 24.04 repositories.

Since Algo already uses systemd-resolved (as seen in the handlers), we
can safely remove openresolv from the dependencies. This fixes the
'Package has no installation candidate' error in CI.

Also updated the documentation to reflect this change for users.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,8 +71,7 @@ jobs:
             crudini \
             fping \
             strongswan \
-            libstrongswan-standard-plugins \
-            openresolv
+            libstrongswan-standard-plugins
 
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
@@ -155,8 +154,7 @@ jobs:
             crudini \
             fping \
             strongswan \
-            libstrongswan-standard-plugins \
-            openresolv
+            libstrongswan-standard-plugins
 
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
