fix: Install LXD snap explicitly on ubuntu-24.04 runners
- Ubuntu 24.04 doesn't come with LXD pre-installed via snap
- Change from 'snap refresh lxd' to 'snap install lxd'
- This should fix the 'snap lxd is not installed' error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,8 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
 
-          sudo snap refresh lxd
+          # Install LXD on Ubuntu 24.04 (not pre-installed)
+          sudo snap install lxd
           sudo lxd init --auto
 
       - name: Provision
@@ -159,7 +160,8 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
 
-          sudo snap refresh lxd
+          # Install LXD on Ubuntu 24.04 (not pre-installed)
+          sudo snap install lxd
           sudo lxd init --auto
 
       - name: Provision
