feat: Add comprehensive test coverage based on common issues
Based on analysis of recent issues and PRs, added tests for:

1. User Management (#14745, #14746, #14738, #14726)
   - Server selection parsing bugs
   - SSH key preservation
   - CA password validation
   - Duplicate user detection

2. OpenSSL Compatibility (#14755, #14718)
   - Version detection and legacy flag support
   - Apple device key format requirements
   - PKCS#12 export validation

3. Cloud Provider Configs (#14752, #14730, #14762)
   - Hetzner server type updates (cx11 → cx22)
   - Azure dependency compatibility
   - Region and size format validation

4. Configuration Validation
   - WireGuard config format
   - Certificate validation
   - Network configuration
   - Security requirements

Also:
- Fixed all zizmor security warnings (added job names)
- Added comprehensive test documentation
- All tests run in CI and pass locally

This addresses the most common user issues and prevents
regressions in frequently problematic areas.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ permissions:
 
 jobs:
   lint:
+    name: Lint code
     runs-on: ubuntu-22.04
     permissions:
       contents: read
@@ -34,6 +35,7 @@ jobs:
           ansible-lint -x experimental,package-latest,unnamed-task -v *.yml roles/{local,cloud-*}/*/*.yml || true
 
   basic-tests:
+    name: Basic sanity tests
     runs-on: ubuntu-22.04
     permissions:
       contents: read
@@ -53,9 +55,16 @@ jobs:
           sudo apt-get update && sudo apt-get install -y shellcheck
 
       - name: Run basic sanity tests
-        run: python tests/unit/test_basic_sanity.py
+        run: |
+          python tests/unit/test_basic_sanity.py
+          python tests/unit/test_config_validation.py
+          python tests/unit/test_certificate_validation.py
+          python tests/unit/test_user_management.py
+          python tests/unit/test_openssl_compatibility.py
+          python tests/unit/test_cloud_provider_configs.py
 
   docker-build:
+    name: Docker build test
     runs-on: ubuntu-22.04
     permissions:
       contents: read
@@ -73,6 +82,7 @@ jobs:
           docker run --rm local/algo:test /algo/algo --help
 
   config-generation:
+    name: Configuration generation test
     runs-on: ubuntu-22.04
     timeout-minutes: 10
     permissions:
