--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,10 +18,12 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
 
-      - name: Install ansible-lint
+      - name: Install ansible-lint and dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ansible-lint
+          pip install ansible-lint ansible
+          # Install required ansible collections
+          ansible-galaxy collection install community.crypto
 
       - name: Run ansible-lint
         run: |
