feat: Implement review recommendations for test improvements
1. Remove weak Docker tests
   - Removed test_docker_deployment_script (just checked Docker exists)
   - Removed test_service_config_locations (only printed directories)
   - Removed test_generated_config_structure (only printed expected output)
   - Kept only tests that validate actual configurations

2. Add comprehensive integration tests
   - New workflow for localhost deployment testing
   - Tests actual VPN service startup (WireGuard, StrongSwan)
   - Docker deployment test that generates real configs
   - Upgrade scenario test to ensure existing users preserved
   - Matrix testing for different VPN configurations

3. Move test data to shared fixtures
   - Created tests/fixtures/test_variables.yml for consistency
   - All test variables now in one maintainable location
   - Updated template rendering tests to use fixtures
   - Prevents test data drift from actual defaults

4. Add smart test selection based on changed files
   - New smart-tests.yml workflow for PRs
   - Only runs relevant tests based on what changed
   - Uses dorny/paths-filter to detect file changes
   - Reduces CI time for small changes
   - Main workflow now only runs on master/main push

5. Implement test effectiveness monitoring
   - track-test-effectiveness.py analyzes CI failures
   - Correlates failures with bug fixes vs false positives
   - Weekly automated reports via GitHub Action
   - Creates issues when tests are ineffective
   - Tracks metrics in .metrics/ directory
   - Simple failure annotation script for tracking

These changes make the test suite more focused, maintainable,
and provide visibility into which tests actually catch bugs.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: Main
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - main
+  workflow_dispatch:
 
 permissions:
   contents: read
